Banner theming fixes on mobile devices.

--- a/src/sass/components/banner/_banner.scss
+++ b/src/sass/components/banner/_banner.scss
@@ -1,40 +1,78 @@
 .banner {
-  background-image: url('../../images/background-1.png');
+  background-image: url('../../images/banner-mobile.png');
+  background-repeat: no-repeat;
+  background-size: 100%;
+
+  @media screen and (min-width: 992px) {
+    background-image: url('../../images/banner-desktop.png');
+  }
 }
 
 .banner-wrapper {
   text-align: center;
-  padding-top: 110px;
-  padding-bottom: 210px;
+  padding-top: 50px;
+  padding-bottom: 145px;
   color: $white;
+
+  @media screen and (min-width: 992px) {
+    padding-top: 110px;
+    padding-bottom: 210px;
+  }
 }
 
 .banner__images {
-  display: flex;
-  justify-content: center;
-  padding: 20px 0;
+  padding: 5px 0 0;
+
+  @media screen and (min-width: 992px) {
+    display: flex;
+    justify-content: center;
+    padding: 20px 0;
+  }
 }
 
 .banner__heading {
-  max-width: 460px;
-  margin: 0 auto;
-  padding: 20px 0;
+  padding: 35px 15px 35px 25px;
+
+  @media screen and (min-width: 992px) {
+    max-width: 460px;
+    margin: 0 auto;
+    padding: 20px 0;
+  }
 }
 
 img.banner-service {
-  width: 65px;
-  height: 65px;
-  margin-bottom: 10px;
+  width: 40px;
+  height: 40px;
+  margin-right: 20px;
+
+  @media screen and (min-width: 992px) {
+    width: 65px;
+    height: 65px;
+    margin-bottom: 10px;
+    margin-right: 0;
+  }
+
+  &.service-name {
+    @media only screen and (max-width: 991px) {
+      width: 40px;
+      height: 35px;
+    }
+  }
 }
 
 .service-wrapper {
   display: flex;
-  flex-direction: column;
-  padding: 40px 40px;
+  padding: 10px 20px;
   align-items: center;
   border: 1px solid #47433f;
   border-radius: 5px;
-  margin: 0 10px;
+  margin-bottom: 10px;
+
+  @media screen and (min-width: 992px) {
+    flex-direction: column;
+    padding: 40px 40px;
+    margin: 0 10px;
+  }
 
   span {
     padding: 10px 0;
